# polymarket-bot

./: .env.example  Cargo.toml  docker-compose.yml  polymarket-dashboard.json  prometheus.yml
btc/: Cargo.toml
btc/src/: main.rs
common/: Cargo.toml
common/src/: dto.rs  lib.rs  metrics.rs  utils.rs
eth/src/: main.rs
sol/src/: main.rs
xrp/src/: main.rs
