[workspace]
members = ["btc", "common", "eth", "sol", "xrp"]


[workspace.dependencies]
polymarket-client-sdk = "0.1"
alloy = "1.1.3"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
anyhow = "1.0.100"
alloy-primitives = "1.5"
dotenvy = "0.15.7"
rust_decimal = { version = "1", features = ["macros"] }
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4"
axum = "0.7"
prometheus = "0.13"
